Style: update room ui & fix calendar z-index

--- a/styles/global.css
+++ b/styles/global.css
@@ -14,6 +14,10 @@ body {
   background: #f9f9f9;
 }
 
+.react-datepicker-popper {
+  z-index: 99 !important;
+}
+
 ::-webkit-scrollbar-track {
   background-color: #2b2b2b;
 }
